k8s/kustomize/base/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
